# ai-ml-trading-bot

./: .dockerignore  .gitignore  .performance-rules.md  .pre-commit-config.yaml  ADD_DATABASE_URL.md  ADD_INDEXES_NOW.md  AI_ANALYSIS_GUIDE.md  AI_ANALYSIS_REDESIGN.md  ALERT_SETUP.md  API_DOCUMENTATION.md  API_KEYS_GUIDE.md  ARBITRAGE_DETECTION_IMPLEMENTED.md  AUTOMATION_GUIDE.md  AUTO_TRADING_STATUS.md  BACKGROUND_SERVICE_GUIDE.md  BEST_PRACTICES_APPLIED.md  CACHE_TEST_RESULTS.md  CHECK_LOGS_FOR_SIGNALS.md  CHECK_PASSWORD_IN_RAILWAY.md  COMPETITIVE_FEATURES.md  COMPLETED.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETE_MIGRATION_GUIDE.md  COMPLETE_PERFORMANCE_AUDIT.md  CONSTRUCT_AND_IMPORT.sh  CRITICAL_FIXES_APPLIED.md  CRON_JOB_COMPLETE_SETUP.md  CRON_JOB_SUCCESS.md  CRON_TIMEOUT_INVESTIGATION.md  CURRENT_SETUP.md  DASHBOARD_FEATURES_ADDED.md  DATABASE_DIAGNOSTICS_GUIDE.md  DATABASE_SETUP.md  DATA_SOURCE_EXPLANATION.md  DATA_UPDATE_GUIDE.md  DEBUG_SIGNAL_CREATION.md  DEMO_DATA_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  (+202 more)
config/: data_sources.yaml  model_params.yaml  trading_params.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: README_WHALE_DISCOVERY.md  __init__.py  add_indexes_railway.sh  add_performance_indexes.sql  add_trades_index.py  background_prediction_service.py  backtest.py  check_performance.py  check_signals_trades.py  check_training_data.py  check_training_status.sh  configure_energy_saver.sh  create_trades_from_signals.py  diagnose_database.py  diagnose_issues.py  diagnose_performance.sh  generate_demo_data.py  generate_predictions.py  init_db.py  (+27 more)
(+130 files in other folders)
